tests/typechecker/fail/031-exhaustive-pattern-matching.hyg
// An optional integer value.
type OptionalInt = union {
    Some: int;
    None: unit
};

fun displayOption(o: OptionalInt): unit =
    match o with {
        Some{x} -> println(x);
        None{_} -> println("None");
        Some{x} -> println("Duplicate case label")
    };

displayOption(Some{42})